--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -50,30 +50,14 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:gravity="center"
-                android:layout_marginLeft="20sp"
-                android:id="@+id/btn_robot_change">
+                android:layout_marginLeft="20sp">
                 <ImageView
-                    android:layout_width="25sp"
-                    android:layout_height="25sp"
-                    android:layout_marginTop="-5dp"
-                    android:layout_marginRight="-3dp"
+                    android:layout_width="37sp"
+                    android:layout_height="37sp"
                     android:background="@drawable/outline_robot_2_24"
                     android:backgroundTint="#ffffff"
-                    android:gravity="center_horizontal" />
-                <ImageView
-                    android:layout_width="20sp"
-                    android:layout_height="20sp"
-                    android:background="@drawable/baseline_compare_arrows_24"
-                    android:backgroundTint="#ffffff"
-                    android:gravity="center_horizontal" />
-                <ImageView
-                    android:layout_width="32sp"
-                    android:layout_height="32sp"
-                    android:layout_marginLeft="-5dp"
-                    android:layout_marginBottom="1dp"
-                    android:background="@drawable/outline_robot_2_24"
-                    android:backgroundTint="#ffffff"
-                    android:gravity="center_horizontal" />
+                    android:gravity="center_horizontal"
+                    android:id="@+id/btn_robot_change" />
             </LinearLayout>
             <LinearLayout
                 android:layout_width="wrap_content"
