--- a/app/src/main/res/layout/component_control_camera_movement_touch_buttons.xml
+++ b/app/src/main/res/layout/component_control_camera_movement_touch_buttons.xml
@@ -7,20 +7,43 @@
     android:layout_margin="5dp">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/dataBox"
+            android:layout_margin="5dp"
+            android:padding="10dp"
+            android:orientation="horizontal"
+            android:gravity="center">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="left">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAlignment="gravity"
+                    style="@style/tabTopTitle"
+                    android:text="카메라 이동"/>
+            </LinearLayout>
+        </LinearLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="217dp"
+            android:layout_weight="1"
             android:columnCount="3">
             <Button
-                android:id="@+id/btn_forward"
+                android:id="@+id/btn_up"
                 style="@style/moveControlButtonStyle"
                 android:layout_alignParentTop="true"
                 android:layout_centerInParent="true"
                 android:drawableTop="@drawable/baseline_arrow_upward_24"
                 android:layout_height="65dp"
                 android:textSize="17sp"
-                android:text="전진"/>
+                android:text="상(+y')"/>
             <Button
                 android:id="@+id/btn_leftward"
                 style="@style/moveControlButtonStyle"
@@ -29,7 +52,7 @@
                 android:drawableLeft="@drawable/baseline_arrow_back_24"
                 android:layout_height="65dp"
                 android:textSize="17sp"
-                android:text="좌회전"/>
+                android:text="좌(-x')"/>
             <Button
                 android:id="@+id/btn_rightward"
                 style="@style/moveControlButtonStyle"
@@ -38,16 +61,16 @@
                 android:drawableRight="@drawable/baseline_arrow_forward_24"
                 android:layout_height="65dp"
                 android:textSize="17sp"
-                android:text="우회전"/>
+                android:text="우(+x')"/>
             <Button
-                android:id="@+id/btn_backward"
+                android:id="@+id/btn_down"
                 style="@style/moveControlButtonStyle"
                 android:layout_alignParentBottom="true"
                 android:layout_centerInParent="true"
                 android:drawableBottom="@drawable/baseline_arrow_downward_24"
                 android:layout_height="65dp"
                 android:textSize="17sp"
-                android:text="후진"/>
+                android:text="하(-y')"/>
         </RelativeLayout>
     </LinearLayout>
 </LinearLayout>
