--- a/app/src/main/res/layout/item_program.xml
+++ b/app/src/main/res/layout/item_program.xml
@@ -23,50 +23,44 @@
                 android:padding="5dp" />
 
             <TextView
-                android:id="@+id/start_datetime"
-                android:layout_width="100dp"
+                android:id="@+id/vx"
+                android:layout_width="50dp"
                 android:gravity="center"
-                android:text="2025-05-11 16:22:21"
+                android:text="230"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 android:padding="5dp" />
 
             <TextView
-                android:id="@+id/end_datetime"
-                android:layout_width="100dp"
+                android:id="@+id/vy"
+                android:layout_width="50dp"
                 android:gravity="center"
-                android:text="2025-05-11 16:22:21"
+                android:text="230"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 android:padding="5dp" />
 
             <TextView
-                android:layout_width="80dp"
-                android:id="@+id/diff"
+                android:id="@+id/vz"
+                android:layout_width="50dp"
                 android:gravity="center"
                 android:text="102"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 android:padding="5dp" />
             <TextView
-                android:id="@+id/field"
+                android:id="@+id/cx"
+                android:layout_width="50dp"
                 android:gravity="center"
-                android:text="1구역"
+                android:text="230"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 android:padding="5dp" />
             <TextView
-                android:id="@+id/floor"
+                android:id="@+id/cy"
+                android:layout_width="50dp"
                 android:gravity="center"
-                android:text="1층"
-                android:textColor="#FFFFFF"
-                android:textSize="14sp"
-                android:padding="5dp" />
-            <TextView
-                android:layout_width="80dp"
-                android:id="@+id/value"
-                android:gravity="center"
-                android:text="작업완료"
+                android:text="230"
                 android:textColor="#FFFFFF"
                 android:textSize="14sp"
                 android:padding="5dp" />
