--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -385,6 +385,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="controlButtonStyleInGrid" parent="controlButtonStyle">
         <item name="android:layout_width">match_parent</item>
