--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,14 +10,19 @@
         android:background="@color/background"
         android:gravity="center"
         android:orientation="vertical">
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:background="@drawable/outline_robot_2_24"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16sp"
+            android:gravity="center"
             android:text="@string/app_name_short"
             android:textColor="@color/text_color_smaller"
-            android:layout_marginTop="16sp"
-            android:textSize="27sp"
-            android:gravity="center"/>
+            android:textSize="27sp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
