--- a/app/src/main/res/layout/component_control_camera_movement_touch_buttons.xml
+++ b/app/src/main/res/layout/component_control_camera_movement_touch_buttons.xml
@@ -30,47 +30,76 @@
                     android:text="카메라 이동"/>
             </LinearLayout>
         </LinearLayout>
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="217dp"
-            android:layout_weight="1"
-            android:columnCount="3">
-            <Button
-                android:id="@+id/btn_up"
-                style="@style/moveControlButtonStyle"
-                android:layout_alignParentTop="true"
-                android:layout_centerInParent="true"
-                android:drawableTop="@drawable/baseline_arrow_upward_24"
-                android:layout_height="65dp"
-                android:textSize="17sp"
-                android:text="상(+y')"/>
-            <Button
-                android:id="@+id/btn_leftward"
-                style="@style/moveControlButtonStyle"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:drawableLeft="@drawable/baseline_arrow_back_24"
-                android:layout_height="65dp"
-                android:textSize="17sp"
-                android:text="좌(-x')"/>
-            <Button
-                android:id="@+id/btn_rightward"
-                style="@style/moveControlButtonStyle"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:drawableRight="@drawable/baseline_arrow_forward_24"
-                android:layout_height="65dp"
-                android:textSize="17sp"
-                android:text="우(+x')"/>
-            <Button
-                android:id="@+id/btn_down"
-                style="@style/moveControlButtonStyle"
-                android:layout_alignParentBottom="true"
-                android:layout_centerInParent="true"
-                android:drawableBottom="@drawable/baseline_arrow_downward_24"
-                android:layout_height="65dp"
-                android:textSize="17sp"
-                android:text="하(-y')"/>
-        </RelativeLayout>
+            android:layout_height="wrap_content">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="217dp"
+                android:layout_weight="1"
+                android:columnCount="3">
+                <Button
+                    android:id="@+id/btn_up"
+                    style="@style/moveControlButtonStyle"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerInParent="true"
+                    android:drawableTop="@drawable/baseline_arrow_upward_24"
+                    android:layout_height="65dp"
+                    android:textSize="17sp"
+                    android:text="상(+y')"/>
+                <Button
+                    android:id="@+id/btn_leftward"
+                    style="@style/moveControlButtonStyle"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:drawableLeft="@drawable/baseline_arrow_back_24"
+                    android:layout_height="65dp"
+                    android:textSize="17sp"
+                    android:text="좌(-x')"/>
+                <Button
+                    android:id="@+id/btn_rightward"
+                    style="@style/moveControlButtonStyle"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:drawableRight="@drawable/baseline_arrow_forward_24"
+                    android:layout_height="65dp"
+                    android:textSize="17sp"
+                    android:text="우(+x')"/>
+                <Button
+                    android:id="@+id/btn_down"
+                    style="@style/moveControlButtonStyle"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
+                    android:drawableBottom="@drawable/baseline_arrow_downward_24"
+                    android:layout_height="65dp"
+                    android:textSize="17sp"
+                    android:text="하(-y')"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="217dp"
+                android:layout_weight="3"
+                android:columnCount="3">
+                <Button
+                    android:id="@+id/btn_forward"
+                    style="@style/moveControlButtonStyle"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerInParent="true"
+                    android:drawableTop="@drawable/baseline_keyboard_double_arrow_left_24"
+                    android:layout_height="65dp"
+                    android:textSize="17sp"
+                    android:text="정회전(+z')"/>
+                <Button
+                    android:id="@+id/btn_backward"
+                    style="@style/moveControlButtonStyle"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
+                    android:drawableBottom="@drawable/baseline_keyboard_double_arrow_right_24"
+                    android:layout_height="65dp"
+                    android:textSize="17sp"
+                    android:text="역회전(-z')"/>
+            </RelativeLayout>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
