--- a/app/src/main/res/layout/component_control_camera_movement_touch_buttons.xml
+++ b/app/src/main/res/layout/component_control_camera_movement_touch_buttons.xml
@@ -27,7 +27,7 @@
                     android:layout_height="wrap_content"
                     android:textAlignment="gravity"
                     style="@style/tabTopTitle"
-                    android:text="카메라 이동"/>
+                    android:text="카메라 앵글 이동"/>
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
@@ -36,69 +36,81 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="217dp"
-                android:layout_weight="1"
-                android:columnCount="3">
+                android:layout_weight="1">
                 <Button
-                    android:id="@+id/btn_up"
+                    android:id="@+id/btn_x_up"
                     style="@style/moveControlButtonStyle"
                     android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
                     android:drawableTop="@drawable/baseline_arrow_upward_24"
                     android:layout_height="65dp"
                     android:textSize="17sp"
-                    android:text="상(+y')"/>
+                    android:text="+x'"/>
                 <Button
-                    android:id="@+id/btn_leftward"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:drawableLeft="@drawable/baseline_arrow_back_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="좌(-x')"/>
-                <Button
-                    android:id="@+id/btn_rightward"
-                    style="@style/moveControlButtonStyle"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:drawableRight="@drawable/baseline_arrow_forward_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="우(+x')"/>
-                <Button
-                    android:id="@+id/btn_down"
+                    android:id="@+id/btn_x_down"
                     style="@style/moveControlButtonStyle"
                     android:layout_alignParentBottom="true"
                     android:layout_centerInParent="true"
                     android:drawableBottom="@drawable/baseline_arrow_downward_24"
                     android:layout_height="65dp"
                     android:textSize="17sp"
-                    android:text="하(-y')"/>
+                    android:text="-x'"/>
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="217dp"
-                android:layout_weight="3"
-                android:columnCount="3">
+                android:layout_weight="1">
+                <Button
+                    android:id="@+id/btn_y_up"
+                    style="@style/moveControlButtonStyle"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerInParent="true"
+                    android:drawableTop="@drawable/baseline_arrow_upward_24"
+                    android:layout_height="65dp"
+                    android:textSize="17sp"
+                    android:text="+y'"/>
+                <Button
+                    android:id="@+id/btn_y_down"
+                    style="@style/moveControlButtonStyle"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerInParent="true"
+                    android:drawableBottom="@drawable/baseline_arrow_downward_24"
+                    android:layout_height="65dp"
+                    android:textSize="17sp"
+                    android:text="-y'"/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="217dp"
+                android:layout_weight="1">
                 <Button
                     android:id="@+id/btn_forward"
                     style="@style/moveControlButtonStyle"
                     android:layout_alignParentTop="true"
                     android:layout_centerInParent="true"
-                    android:drawableTop="@drawable/baseline_keyboard_double_arrow_left_24"
+                    android:drawableTop="@drawable/baseline_keyboard_double_arrow_right_24"
                     android:layout_height="65dp"
                     android:textSize="17sp"
-                    android:text="정회전(+z')"/>
+                    android:text="+z'"/>
+
                 <Button
                     android:id="@+id/btn_backward"
                     style="@style/moveControlButtonStyle"
+                    android:layout_width="123dp"
+                    android:layout_height="58dp"
                     android:layout_alignParentBottom="true"
                     android:layout_centerInParent="true"
-                    android:drawableBottom="@drawable/baseline_keyboard_double_arrow_right_24"
-                    android:layout_height="65dp"
-                    android:textSize="17sp"
-                    android:text="역회전(-z')"/>
+                    android:layout_marginStart="3dp"
+                    android:layout_marginLeft="3dp"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginEnd="3dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_marginBottom="10dp"
+                    android:drawableBottom="@drawable/baseline_keyboard_double_arrow_left_24"
+                    android:text="-z'"
+                    android:textSize="17sp" />
             </RelativeLayout>
         </LinearLayout>
     </LinearLayout>
