--- a/app/src/main/res/layout/item_program.xml
+++ b/app/src/main/res/layout/item_program.xml
@@ -8,7 +8,7 @@
     <TableLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="1,2,3,4,5">
+        android:stretchColumns="1,2,3,4,5,6">
         <TableRow
             android:id="@+id/background"
             android:paddingVertical="3dp">
@@ -58,6 +58,14 @@
                 android:padding="5dp" />
             <TextView
                 android:id="@+id/cy"
+                android:layout_width="50dp"
+                android:gravity="center"
+                android:text="230"
+                android:textColor="#FFFFFF"
+                android:textSize="14sp"
+                android:padding="5dp" />
+            <TextView
+                android:id="@+id/cz"
                 android:layout_width="50dp"
                 android:gravity="center"
                 android:text="230"
