--- a/app/src/main/res/layout/item_program.xml
+++ b/app/src/main/res/layout/item_program.xml
@@ -23,7 +23,7 @@
                 android:padding="5dp" />
 
             <TextView
-                android:id="@+id/vx"
+                android:id="@+id/x"
                 android:layout_width="50dp"
                 android:gravity="center"
                 android:text="230"
@@ -32,7 +32,7 @@
                 android:padding="5dp" />
 
             <TextView
-                android:id="@+id/vy"
+                android:id="@+id/y"
                 android:layout_width="50dp"
                 android:gravity="center"
                 android:text="230"
@@ -41,7 +41,7 @@
                 android:padding="5dp" />
 
             <TextView
-                android:id="@+id/vz"
+                android:id="@+id/z"
                 android:layout_width="50dp"
                 android:gravity="center"
                 android:text="102"
@@ -49,7 +49,7 @@
                 android:textSize="14sp"
                 android:padding="5dp" />
             <TextView
-                android:id="@+id/cx"
+                android:id="@+id/s1"
                 android:layout_width="50dp"
                 android:gravity="center"
                 android:text="230"
@@ -57,7 +57,7 @@
                 android:textSize="14sp"
                 android:padding="5dp" />
             <TextView
-                android:id="@+id/cy"
+                android:id="@+id/s2"
                 android:layout_width="50dp"
                 android:gravity="center"
                 android:text="230"
@@ -65,7 +65,7 @@
                 android:textSize="14sp"
                 android:padding="5dp" />
             <TextView
-                android:id="@+id/cz"
+                android:id="@+id/s3"
                 android:layout_width="50dp"
                 android:gravity="center"
                 android:text="230"
