--- a/app/src/main/res/layout/item_robot_connect.xml
+++ b/app/src/main/res/layout/item_robot_connect.xml
@@ -104,35 +104,54 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
                         android:layout_marginBottom="5dp"
                         android:textColor="@color/background"
                         android:textSize="17sp"
                         android:gravity="center"
-                        android:text="MAC ADDR :"/>
+                        android:text="mqtt://"/>
                     <TextView
-                        android:id="@+id/mac"
+                        android:id="@+id/ip"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="5dp"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
                         android:layout_marginBottom="5dp"
                         android:textColor="@color/background"
                         android:textSize="17sp"
                         android:gravity="center"
-                        android:text="11:11:11:11:11:11"/>
+                        android:text="192.168.0.201"/>
                     <TextView
-                        android:id="@+id/bandView"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textSize="14sp"
-                        android:text="5"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:paddingTop="2dp"
-                        android:paddingBottom="2dp"
-                        android:textColor="#fff"
-                        android:background="@drawable/rounded_slim"
-                        android:backgroundTint="@color/squareBackground"/>
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
+                        android:layout_marginBottom="5dp"
+                        android:textColor="@color/background"
+                        android:textSize="17sp"
+                        android:gravity="center"
+                        android:text=":"/>
+                    <TextView
+                        android:id="@+id/port"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:paddingTop="5dp"
+                        android:paddingBottom="5dp"
+                        android:paddingLeft="2dp"
+                        android:paddingRight="2dp"
+                        android:layout_marginBottom="5dp"
+                        android:textColor="@color/background"
+                        android:textSize="17sp"
+                        android:gravity="center"
+                        android:text="1883"/>
+
                 </LinearLayout>
                 <TextView
                     android:id="@+id/name"
@@ -145,7 +164,7 @@
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="21sp"
-                    android:text=""/>
+                    android:text="192.168.0.201:1883"/>
             </LinearLayout>
         </LinearLayout>
         <ProgressBar
