--- a/app/src/main/res/layout/item_robot_connect.xml
+++ b/app/src/main/res/layout/item_robot_connect.xml
@@ -112,7 +112,7 @@
                         android:textColor="@color/background"
                         android:textSize="17sp"
                         android:gravity="center"
-                        android:text="mqtt://"/>
+                        android:text="tcp://"/>
                     <TextView
                         android:id="@+id/ip"
                         android:layout_width="match_parent"
@@ -154,7 +154,7 @@
 
                 </LinearLayout>
                 <TextView
-                    android:id="@+id/name"
+                    android:id="@+id/device_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_state_03"
@@ -164,7 +164,7 @@
                     android:gravity="center"
                     android:textStyle="bold"
                     android:textSize="21sp"
-                    android:text="192.168.0.201:1883"/>
+                    android:text="controller01"/>
             </LinearLayout>
         </LinearLayout>
         <ProgressBar
