--- a/app/src/main/res/layout/activity_header.xml
+++ b/app/src/main/res/layout/activity_header.xml
@@ -51,12 +51,20 @@
                 android:layout_alignParentRight="true"
                 android:gravity="center"
                 android:layout_marginLeft="20sp">
+                <TextView
+                    android:id="@+id/textConnected"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:textSize="17dp"
+                    android:text="현재 연결중입니다."
+                    android:layout_marginRight="10dp"/>
                 <ImageView
                     android:layout_width="37sp"
                     android:layout_height="37sp"
                     android:background="@drawable/outline_robot_2_24"
                     android:backgroundTint="#ffffff"
-                    android:gravity="center_horizontal"
+                    android:gravity="center_vertical"
                     android:id="@+id/btn_robot_change" />
             </LinearLayout>
             <LinearLayout
