--- a/app/src/main/res/layout/activity_robot_list.xml
+++ b/app/src/main/res/layout/activity_robot_list.xml
@@ -189,17 +189,19 @@
                             </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/fabAddRobot"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="16dp"
-                        android:contentDescription="로봇 추가"
-                        app:srcCompat="@android:drawable/ic_input_add"
-                        app:layout_anchorGravity="bottom|end"
-                        app:layout_anchor="@id/robotRecyclerView" />
                 </LinearLayout>
             </LinearLayout>
         </androidx.core.widget.NestedScrollView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAddRobot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:contentDescription="로봇 추가"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            app:srcCompat="@android:drawable/ic_input_add"
+            app:layout_anchorGravity="bottom|end"
+            app:layout_anchor="@id/robotRecyclerView" />
     </RelativeLayout>
 </LinearLayout>
