woojin home commit

--- a/app/src/main/res/layout/component_control_vim_movement_touch_buttons.xml
+++ b/app/src/main/res/layout/component_control_vim_movement_touch_buttons.xml
@@ -100,5 +100,13 @@
                     android:text="뒤(-z)"/>
             </RelativeLayout>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
